Potential fix for IE10 cover z-index issue

--- a/Survey/source/styles/o-question-hnumberslider.scss
+++ b/Survey/source/styles/o-question-hnumberslider.scss
@@ -63,7 +63,7 @@
 .a-style-sliderborder {
     box-sizing: border-box;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     height: 24px;
     border: 1px solid globals.$borders;
