--- a/Survey/source/styles/o-question.scss
+++ b/Survey/source/styles/o-question.scss
@@ -29,3 +29,7 @@
     overflow-x: auto;
     overflow-y: visible;
 }
+
+.o-question-core {
+    z-index: 2;
+}
